# myos-arm64

./: .gdbinit  .gitattributes  .gitignore  .gitmodules  .rust-project  LICENSE  Makefile  README.MD  api.md  compile_commands.json  config.mk  debug_start.sh  extention.md  gdb_commands.txt  init.sh  install-none.sh  log.md  log.txt  parse_elf_segments.sh  regs.txt  virt.dtb  virt.dts
.marscode/: deviceInfo.json
boot/: boot.S  bootc.c  link.ld  vector.S
doc/: DAIF.md  PCB.md  PSTATE.md  algorithm.md  align.txt  cpsr.md  env  errors.md  fdt_usage.md  gic.md  irq.md  link.ld  make.md  problem-log.md  rust.md  session-ses_136b.md  timer.md  user_code.md  user_process.md
driver/: gic.c  timer.c  uart.c
example/: init.sh
exception/: handler.c
include/: brk.h  compiler.h  exception.h  fdt.h  gfp.h  gic.h  io.h  irq.h  kheap.h  libc.h  libfdt.h  libfdt_env.h  libfdt_internal.h  mm.h  mm_defs.h  mmu.h  page_fault.h  pgtbl.h  pmm.h  printk.h  slab.h  sync.h  timer.h  types.h  uart.h  utils.h  vma.h  (+3 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: allocator.rs  config.rs  console.rs  ffi.rs  irq.rs  lib.rs  sync.rs
rust/src/arch/aarch64/: context.rs  cpu.rs  mod.rs
rust/src/kernel/: bio.rs  elf.rs  mm.rs  mod.rs  pgtbl.rs  phys_page.rs  scheduler.rs  signal.rs  syscall.rs  task.rs  tty.rs  user_bin.rs  virtio.rs  wait.rs
rust/src/kernel/fs/: fat32.rs  mod.rs  vfs.rs
rust/src/sync/: mod.rs  mutex.rs  semaphore.rs
rust/wrapper/: .gitignore  Cargo.toml  build.rs  build.sh
rust/wrapper/.cargo/: config.toml
rust/wrapper/src/: lib.rs  test_repr.rs
(+262 files in other folders)
